@@ -1,0 +1,48 @@
+{
+    "package": {
+        "elements": {
+            "tvs": [
+                {
+                    "caption": "Person",
+                    "name": "person_id",
+                    "description": "Connect a MODX user to this item. Only active users will be shown.",
+                    "type": "listbox",
+                    "inputOptionValues": "@SELECT '' AS username, '' AS id UNION ALL ( SELECT username, id FROM `modx_users` ORDER BY username )",
+                    "category": "Connections",
+                    "sortOrder": "1"
+                },{
+                    "caption": "Organization",
+                    "name": "organization_id",
+                    "description": "Connect the related organization(s). If this list is empty, you need to create an Organizations container first and register its ID under System Settings.",
+                    "type": "listbox-multiple",
+                    "inputOptionValues": "@CHUNK tvSelectClient",
+                    "category": "Connections",
+                    "sortOrder": "2",
+                    "templates": [
+                        "@@templates_portfolio"
+                    ]
+                },{
+                    "caption": "Contributors",
+                    "name": "contributors_id",
+                    "description": "Link the team members that worked on this item. You can only select persons that are listed on your Team page, so if you want to add an external team member, you should add him or her to your team page first (can be unpublished).",
+                    "type": "listbox-multiple",
+                    "inputOptionValues": "@CHUNK tvSelectTeam",
+                    "category": "Connections",
+                    "sortOrder": "3",
+                    "templates": [
+                        "@@templates_portfolio"
+                    ]
+                }
+            ],
+            "categories": [
+                {
+                    "name": "e_connections",
+                    "parent": "00_electrons"
+                },{
+                    "name": "Connections",
+                    "parent": "e_connections"
+                }
+            ]
+        }
+    }
+}
