@@ -66,7 +66,7 @@
                     "caption": "Organization website",
                     "name": "organization_url",
                     "description": "",
-                    "type": "url",
+                    "type": "text",
                     "category": "Org. - Information",
                     "sortOrder": "20",
                     "templates": [
